force-app/main/default/objects/Volume_Pricing_Tier__c/Volume_Pricing_Tier__c.object-meta.xml
<CustomObject>
    <description>Defines quantity range pricing rows under a volume pricing schedule.</description>
    <label>Volume Pricing Tier</label>
    <nameField>
        <label>Tier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Volume Pricing Tiers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>