force-app/main/default/objects/Volume_Pricing_Tier__c/fields/Lower_Bound__c.field-meta.xml
<CustomField>
    <fullName>Lower_Bound__c</fullName>
    <inlineHelpText>The minimum quantity for this tier (inclusive). Example: a tier covering quantities 1-20 has a Lower Bound of 1.</inlineHelpText>
    <label>Lower Bound</label>
    <precision>10</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>