force-app/main/default/objects/Volume_Pricing_Tier__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <inlineHelpText>For Tiered schedules: unit price in this range. For Block schedules: flat total price for this range.</inlineHelpText>
    <label>Price</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>