force-app/main/default/objects/Volume_Pricing_Tier__c/fields/Upper_Bound__c.field-meta.xml
<CustomField>
    <fullName>Upper_Bound__c</fullName>
    <inlineHelpText>The first quantity that falls outside this tier (exclusive). Leave blank on the final tier to indicate no ceiling.</inlineHelpText>
    <label>Upper Bound</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>