force-app/main/default/objects/Volume_Pricing_Tier__c/fields/Volume_Pricing_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Volume_Pricing_Schedule__c</fullName>
    <inlineHelpText>Parent schedule this tier belongs to. Deleting the parent schedule deletes this tier.</inlineHelpText>
    <label>Volume Pricing Schedule</label>
    <referenceTo>Volume_Pricing_Schedule__c</referenceTo>
    <relationshipLabel>Volume Pricing Tiers</relationshipLabel>
    <relationshipName>Volume_Pricing_Tiers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>