force-app/main/default/objects/Volume_Pricing_Tier__c/validationRules/Volume_Pricing_Tier_Bounds_Valid.validationRule-meta.xml
<ValidationRule>
    <fullName>Volume_Pricing_Tier_Bounds_Valid</fullName>
    <active>true</active>
    <description>Ensures valid quantity bounds and non-negative pricing.</description>
    <errorConditionFormula>OR(
  AND(
    NOT(ISBLANK(Upper_Bound__c)),
    Lower_Bound__c &gt;= Upper_Bound__c
  ),
  Price__c &lt; 0
)</errorConditionFormula>
    <errorDisplayField>Price__c</errorDisplayField>
    <errorMessage>Invalid tier: Lower Bound must be less than Upper Bound, and Price must be zero or positive.</errorMessage>
</ValidationRule>