force-app/main/default/objects/Volume_Pricing_Tier__c/validationRules/Volume_Pricing_Tier_Lower_Bound_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Volume_Pricing_Tier_Lower_Bound_Positive</fullName>
    <active>true</active>
    <description>Prevents zero or negative lower bounds.</description>
    <errorConditionFormula>Lower_Bound__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Lower_Bound__c</errorDisplayField>
    <errorMessage>Lower Bound must be greater than zero. Tiers must start at a positive quantity.</errorMessage>
</ValidationRule>