force-app/main/default/objects/Volume_Pricing_Tier__c/validationRules/Volume_Pricing_Tier_Sort_Order_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Volume_Pricing_Tier_Sort_Order_Positive</fullName>
    <active>true</active>
    <description>Prevents zero or negative sort order values.</description>
    <errorConditionFormula>Sort_Order__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Sort_Order__c</errorDisplayField>
    <errorMessage>Sort Order must be a positive number. Use increments of 10 (10, 20, 30...).</errorMessage>
</ValidationRule>